# Fuck-JIT

./: Cargo.toml  README.md  outdated_rust.nix  replit.nix  shell.nix
.github/workflows/: format.yml  rust.yml
src/: bfjit.rs  main.rs
